# web-zen-dev

./: .clang-format  .prettierrc  README.md  package.json
docs/: demo.css  index.html  web-devfs.js  webdevfs-dsp.js
docs/pntr/: Makefile  index.html  test.wasm
docs/pntr/src/: test.c
docs/sound/: hotpants.raw  index.html  souldrums.raw
docs/static/: index.html
native/: CMakeLists.txt  README.md
native/src/: host.c  libc_wasi_wrapper.c  wasi_zendev.h
pntr_demo/: CMakeLists.txt  Makefile  README.md
pntr_demo/src/: test.c  utils.h
